[gd_scene load_steps=10 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://assets/Themes/button_pressed.tres" type="StyleBox" id=2]
[ext_resource path="res://assets/Scripts/StartMenu.gd" type="Script" id=3]
[ext_resource path="res://assets/Themes/button_normal.tres" type="StyleBox" id=4]
[ext_resource path="res://assets/Fonts/button_font.tres" type="DynamicFont" id=5]
[ext_resource path="res://assets/Fonts/label_font.tres" type="DynamicFont" id=6]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0 )
colors = PoolColorArray( 0.027451, 0.254902, 0.219608, 1 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="StyleBoxTexture" id=3]
texture = SubResource( 2 )
region_rect = Rect2( 0, 0, 2048, 1 )

[node name="StartMenu" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -360.0
margin_top = -760.0
margin_right = 360.0
margin_bottom = 760.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="startmenu_bg" type="Panel" parent="."]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="logo_label" type="TextureRect" parent="."]
margin_left = 260.0
margin_top = 130.0
margin_right = 460.0
margin_bottom = 330.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 1 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="button_container" type="VBoxContainer" parent="."]
margin_left = 201.0
margin_top = 533.0
margin_right = 519.0
margin_bottom = 986.0
custom_constants/separation = 60
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="play_button" type="Button" parent="button_container"]
margin_right = 318.0
margin_bottom = 111.0
size_flags_horizontal = 5
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/disabled = ExtResource( 4 )
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color_disabled = Color( 0.67451, 1, 0.870588, 1 )
custom_colors/font_color = Color( 0.67451, 1, 0.870588, 1 )
custom_colors/font_color_hover = Color( 0.67451, 1, 0.870588, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
text = "Play"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="options_button" type="Button" parent="button_container"]
margin_top = 171.0
margin_right = 318.0
margin_bottom = 282.0
size_flags_horizontal = 5
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/disabled = ExtResource( 4 )
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color_disabled = Color( 0.67451, 1, 0.870588, 1 )
custom_colors/font_color = Color( 0.67451, 1, 0.870588, 1 )
custom_colors/font_color_hover = Color( 0.67451, 1, 0.870588, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
text = "Options"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="about_button" type="Button" parent="button_container"]
margin_top = 342.0
margin_right = 318.0
margin_bottom = 453.0
size_flags_horizontal = 5
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/disabled = ExtResource( 4 )
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color_disabled = Color( 0.67451, 1, 0.870588, 1 )
custom_colors/font_color = Color( 0.67451, 1, 0.870588, 1 )
custom_colors/font_color_hover = Color( 0.67451, 1, 0.870588, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
text = "About"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="version_container" type="HBoxContainer" parent="."]
margin_left = 303.0
margin_top = 1469.0
margin_right = 417.0
margin_bottom = 1520.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="version_label" type="Label" parent="version_container"]
margin_right = 114.0
margin_bottom = 51.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0, 0.784314, 0.341176, 1 )
text = "0.2a1"
align = 1
valign = 1

[node name="tween" type="Tween" parent="."]

[connection signal="pressed" from="button_container/play_button" to="." method="_on_play_button_pressed"]
